# RTIC_MRE

./: Cargo.toml  README.md  attach.sh  readme.md
src/: main.rs
src/app/: my_module.rs
