[package]
name = "rtic_bug_mre"
version = "3.4.531"
edition = "2021"
authors = ["Diego Frenoux <diego@churrosoft.ar>"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 's'
strip = true
lto = true
codegen-units = 1
panic = "abort"
incremental = false
debug = true

[profile.dev]
opt-level = 's'
strip = true
debug = false
codegen-units = 1
lto = false


[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"]}
cortex-m-rt = "0.7.2"
cortex-m-semihosting = "0.5.0"
embedded-hal = "0.2.7"
panic-halt = "0.2.0"
rtic-sync = "1.0.2"

[dependencies.stm32f4xx-hal]
version = "0.17.1"
features = ["stm32f407", "usb_fs", "rtic"]

[dependencies.rtic]
version = "2.0.1"
features = ["thumbv7-backend"]

[dependencies.rtic-monotonics]
version = "1.0.0"
features = ["cortex-m-systick"]
